--- a/uklady-cyfrowe-i-systemy-wbudowane/lab2/spr/lab2.tex
+++ b/uklady-cyfrowe-i-systemy-wbudowane/lab2/spr/lab2.tex
@@ -41,7 +41,7 @@
   \section{Cel laboratorium}
   Celem laboratorium by³o zapoznanie siê z p³yt¹ $ZL-9572$ oraz obs³ug¹ œrodowiska Xilinx ISE, konfigurowanie zestawu przez interfejs JTAG oraz tworzenie prostych projektów opisanych za pomoc¹ schematów.
   \section{Zadanie nr 1}
-  Zamodelowanie uk³adu sk³adaj¹cego siê z dwóch wejœæ: \textit{$x_{1}$}, \textit{$x_{2}$}, oraz dwóch wyjœæ: \textit{$y_{1}$} i \textit{$y_{2}$}. Schemat uk³adu, sk³adaj¹cego siê z bramek \textit{or} i \textit{xor}, zamieszczony jest na rysunku poni¿ej. \newline
+  Zamodelowanie uk³adu sk³adaj¹cego siê z dwóch wejœæ: \textit{$x_{1}$}, \textit{$x_{2}$}, oraz dwóch wyjœæ: \textit{$y_{1}$} i \textit{$y_{2}$}. Schemat uk³adu, sk³adaj¹cego siê z bramek \textit{or} i \textit{xnor}, zamieszczony jest na rysunku poni¿ej. \newline
       \begin{figure}[htbp]
 	 \begin{center}
          \includegraphics[scale=0.7]{pic1.PNG}
@@ -64,7 +64,7 @@
   Kolejnym etapem zadania by³o zamodelowanie dzia³ania schematu za pomoc¹ programu ModelSim oraz zaprogramowanie urz¹dzenia za pomoc¹ z³¹cza \textit{JTAG}.
   
   \section{Zadanie nr 2}
-  Celem æwiczenia drugiego by³o zaprojektowanie, zooptymalizowanie, modelowanie i wgranie do urz¹dzenia uk³adu obliczaj¹cego wynik równania \textit{Y = (17-X) mod 16}. Dane wprowadzane i wyprowadzane by³y za pomoc¹ magistarli cztero-wejœciowej/wyjœciowej. Dodatkowym zadaniem jakiego siê podjeliœmy by³o wyswietlenie wyniku zadania na wyœwietlaczu segmentowym. W celu stworzenia i zooptymalizowania uk³adu pos³u¿ylismy siê moetod¹ siatek Karnaugh. \\
+  Celem æwiczenia drugiego by³o zaprojektowanie, zooptymalizowanie, modelowanie i wgranie do urz¹dzenia uk³adu obliczaj¹cego wynik równania \textit{Y = (17-X) mod 16}. Dane wprowadzane i wyprowadzane by³y za pomoc¹ magistarli cztero-wejœciowej/wyjœciowej. Dodatkowym zadaniem jakiego siê podjeliœmy by³o wyœwietlenie wyniku zadania na wyœwietlaczu segmentowym. W celu stworzenia i zooptymalizowania uk³adu pos³u¿ylismy siê metod¹ siatek Karnaugh. \\
   \paragraph{}
 	  
 	  \begin{center}
@@ -171,6 +171,6 @@
   \paragraph{}
   
   \section{Wnioski}
-  Laboratorium pozwoli³o nam zapoznaæ siê z obs³ug¹ œrodowiska Xilinx, narzêdzia do modelowania ModelSim oraz programu wgrywaj¹cego uk³ad na p³ytê $ZL-9572$ za pomoc¹ z³¹cza $JTAG$. Dziêki edytorowi ECS, byliœmy wstanie zaprojektowaæ uk³ady bez znajomoœci jêzyka VHDL. 
+  Laboratorium pozwoli³o nam zapoznaæ siê z obs³ug¹ œrodowiska Xilinx, narzêdzia do modelowania ModelSim oraz programu Imapct, wgrywaj¹cego uk³ad na p³ytê $ZL-9572$ za pomoc¹ z³¹cza $JTAG$. Dziêki edytorowi ECS, byliœmy wstanie zaprojektowaæ uk³ady bez znajomoœci jêzyka VHDL. 
   
 \end{document}
