Uklady lab5/sprawko part 3

--- a/uklady-cyfrowe-i-systemy-wbudowane/lab5/spr/lab5.tex
+++ b/uklady-cyfrowe-i-systemy-wbudowane/lab5/spr/lab5.tex
@@ -129,7 +129,7 @@
   \begin{figure}[htbp]
     \begin{center}
       \includegraphics[scale=0.3]{mealy-sim.png}
-      \caption{Schemat układu}
+      \caption{Przebieg symulacji}
      \end{center}
   \end{figure}
 
@@ -204,9 +204,23 @@
 \end{center}
 
 
+  \begin{figure}[htbp]
+    \begin{center}
+      \includegraphics[scale=0.6]{moore-sch.png}
+      \caption{Schemat układu}
+     \end{center}
+  \end{figure}
+
 Do testowania automaty Moore'a wykorzystane zostały identyczne testy jak dla automatu z zadania pierwszego.
 
 \paragraph{}
+
+  \begin{figure}[htbp]
+    \begin{center}
+      \includegraphics[scale=0.5]{moore-sim.png}
+      \caption{Przebieg symulacji}
+     \end{center}
+  \end{figure}
 
 Dodatkowymi zadaniami do zrealizowania było zaimplementowanie sterowania automatem z klawiatury komputera poprzez podłączenie układu za pomocą portu szeregowego. Wciśnięcie klawisza $1$ (kod 49) lub $0$ (kod 48) powodowało sprawdzenie kolejnej cyfry sekwencji przez układ. Klawisz $Esc$ (kod 27) służył do resetowania sekwencji. Wszelkie inne klawisze były ignorowane przez układ.
 
