--- a/bazy-danych-projekt/doc/dbproj.tex
+++ b/bazy-danych-projekt/doc/dbproj.tex
@@ -53,6 +53,13 @@
         \item Estymacja i logowanie czasu i kosztu spędzonego nad zadaniem
       \end{itemize}
 
+   \item Zarządzanie zadaniami do wykonania
+     \begin{itemize}
+       \item Edycja zadań
+       \item Dodawanie komentarzy i plików
+       \item Zmiana stanu 
+     \end{itemize}
+     
     \item Zarządzanie uprawnieniami użytkowników
       \begin{itemize}
         \item Dostęp do projektów
