--- a/technologie-sieciowe-projekt/projekt.tex
+++ b/technologie-sieciowe-projekt/projekt.tex
@@ -25,7 +25,7 @@
     \textit{\small Prowadzący:}\par
     Dr inż. Marcin Markowski \par
     \vspace{2cm}
-    Wydział Elektroniki\\ III rok\\ Pn 14.15 - 16.00\par
+    Wydział Elektroniki\\ III rok\\ Śr 13.15 - 15.00\par
     \vspace{4cm}
     \small \@date
   \end{center}
@@ -35,6 +35,10 @@
 
 \begin{document}
   \maketitle
+  \tableofcontents
+  \newpage
+
   \input{chapters/chapter1.tex}
+  \input{chapters/chapter2.tex}
 
 \end{document}
