--- a/uklady-cyfrowe-i-systemy-wbudowane/lab6/spr/lab6.tex
+++ b/uklady-cyfrowe-i-systemy-wbudowane/lab6/spr/lab6.tex
@@ -73,6 +73,13 @@
     \end{center}
   \end{figure}
 
+  \begin{figure}[htbp]
+    \begin{center}
+      \includegraphics[scale=0.4]{dekoder_beh.png}
+      \caption{Symulacja behawioralna działania dekodera}
+    \end{center}
+  \end{figure}
+
   \subsection{Generator sygnału}
   Generator został zbudowany z połączenia licznika, dekodera, a następnie potrójnej bramki OR podłączonej do 0, 2 i 6 bitu magistrali wyjścia dekodera.
 
@@ -83,7 +90,25 @@
     \end{center}
   \end{figure}
 
+\newpage
+\begin{landscape}
 
+  \begin{figure}[htbp]
+    \begin{center}
+      \includegraphics[scale=0.3]{ukl_asynch.png}
+      \caption{Działanie układu z licznikiem asynchronicznym}
+    \end{center}
+  \end{figure}
+
+
+  \begin{figure}[htbp]
+    \begin{center}
+      \includegraphics[scale=0.3]{ukl_synch.png}
+      \caption{Działanie układu z licznikiem synchronicznym}
+    \end{center}
+  \end{figure}
+\end{landscape}
+\newpage
 
   \section{Wnioski}
 
