--- a/uklady-cyfrowe-i-systemy-wbudowane/lab6/spr/lab6.tex
+++ b/uklady-cyfrowe-i-systemy-wbudowane/lab6/spr/lab6.tex
@@ -71,6 +71,31 @@
 
   \subsection{Licznik synchroniczny}
 
+  \begin{center}
+    \begin{tabular}{|c|c|c|c|c|}
+    \hline
+    \backslashbox{$Q_{0}$}{$Q_{2}$$Q_{1}$} & 00 & 01 & 11 & 10 \\ \hline
+    0 & 0 & 0 & \cellcolor[gray]{0.8}1 & \cellcolor[gray]{0.8}1 \\ \hline
+    1 & 0 & \cellcolor[gray]{0.8}1 & 0 & \cellcolor[gray]{0.8}1 \\ \hline
+    \end{tabular}
+    \\ $Q_{2}'$ = $Q_{2} \bar{Q_{0}}$ + $Q_{2} \bar{Q_{1}}$ + $\bar{Q_{2}} Q_{1} Q_{0}$
+  \end{center}
+
+  \begin{center}
+    \begin{tabular}{|c|c|c|c|c|}
+    \hline
+    \backslashbox{$Q_{0}$}{$Q_{2}$$Q_{1}$} & 00 & 01 & 11 & 10 \\ \hline
+    0 & 0 & \cellcolor[gray]{0.8}1 & \cellcolor[gray]{0.8}1 & 0 \\ \hline
+    1 & \cellcolor[gray]{0.8}1 & 0 & 0 & \cellcolor[gray]{0.8}1 \\ \hline
+    \end{tabular}
+    \\ $Q_{1}'$ = $Q_{1} \oplus Q_{0} $
+  \end{center}
+
+  \begin{center}
+    $Q_{0}'$ = $\bar{Q_{0}}$
+  \end{center}
+
+
   \begin{figure}[htbp]
     \begin{center}
       \includegraphics[scale=0.6]{licznik.png}
