--- a/grafika-tymon/lab1spr/lab1.tex
+++ b/grafika-tymon/lab1spr/lab1.tex
@@ -27,7 +27,7 @@
     \vspace{2cm}
     Wydział Elektroniki\\ III rok\\ Pn TP 08.15 - 11.00\par
     \vspace{4cm}
-    \small \@date
+    \small 7 listopada 2011
   \end{center}
 \end{titlepage}
 }
